--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,24 +6,24 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Active Disturbance Rejection Control of Quadrotor </h3>
+    <h3> Exposure Fusion Algorithm </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Python, OpenCV, Numpy </li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
-  <div class="images-left">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents-right">
-    <h3> Project Title </h3>
+  <div class="contents">
+    <h3> SeaLion Classification </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Matlab, Python, CNN </li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
