--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -14,6 +14,7 @@
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
@@ -22,6 +23,76 @@
     <h3> SeaLion Classification </h3>
     <ul>
       <li> Matlab, Python, CNN </li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Seam Carving for Content-Aware Image Resizing </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Basic Image Processing Routines </h3>
+    <ul>
+      <li> Matlab </li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Quadrotor Simulation with VREP </h3>
+    <ul>
+      <li> Lua, VREP </li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Backstepping Controller for Quadrotor </h3>
+    <ul>
+      <li> Matlab, Simulink, S-Functions </li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Active Disturbance Rejection Controller for Quadrotor </h3>
+    <ul>
+      <li> Matlab, Simulink, S_Functions </li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
