--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -92,7 +92,7 @@
   <div class="contents">
     <h3> Active Disturbance Rejection Controller for Quadrotor </h3>
     <ul>
-      <li> Matlab, Simulink, S_Functions </li>
+      <li> Matlab, Simulink, S-Functions </li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
