--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,12 +8,13 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain"></i>
       <i class="devicon-illustrator-plain"></i>
-      <p>HTML, CSS, Jekyll, Adobe Illustrator</p>
+      <p>HTML, CSS, Jekyll, Adobe Illustrator, Solidworks</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-python-plain"></i>
       <i class="devicon-cplusplus-plain"></i>
+      <i class="devicon-visualstudio-plain"></i>
       <p>Python, C++, MATLAB</p>
     </div>
     <div class="tech">
@@ -22,7 +23,6 @@
       <i class="devicon-github-plain"></i>
       <i class="devicon-linux-plain"></i>
       <i class="devicon-slack-plain"></i>
-      <i class="devicon-visualstudio-plain"></i>
-      <p>ROS, GIT, VREP, Solidworks, MRDS</p>
+      <p>ROS, GIT, VREP, CUDA, Tensorflow, Keras, PyTorch</p>
     </div>
 </div>
