--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,26 +3,27 @@
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
+
+   <div class="tech">
+      <h2>Code</h2>
+      <i class="devicon-python-plain"></i>
+      <i class="devicon-cplusplus-plain"></i>
+      <p>Python, C++, MATLAB</p>
+    </div>
+    
     <div class="tech">
       <h2>Design</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain"></i>
       <i class="devicon-illustrator-plain"></i>
-      <p>HTML, CSS, Jekyll, Adobe Illustrator, Solidworks</p>
+      <p>HTML, CSS, Jekyll, Ai, SolidWorks</p>
     </div>
-    <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-python-plain"></i>
-      <i class="devicon-cplusplus-plain"></i>
-      <i class="devicon-visualstudio-plain"></i>
-      <p>Python, C++, MATLAB</p>
-    </div>
+   
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-github-plain"></i>
       <i class="devicon-linux-plain"></i>
-      <i class="devicon-slack-plain"></i>
-      <p>ROS, GIT, VREP, CUDA, Tensorflow, Keras, PyTorch</p>
+      <p>ROS, GIT, Tensorflow, Keras, PyTorch</p>
     </div>
 </div>
