--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,13 @@
   <h1> Interests & Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
-
+  <div class="contents">
+      <p>I'm interested in the intersection of Robotics and Artificial Intelligence:
+       My expertise and experience range from Computer Vision, Machine Learning,
+       Deep Learning, Control Theory, Signal Processing, Oil&Gas Material Integrity research,
+       Advanced Dynamics. In my spare time, I do sports, video games, and I like to contribute 
+       to work on open research such as the Humbug<href="http://humbug.ac.uk/"> Mosquito-Vector research.
+   </p>
    
    <div class="tech">
       <h2>Code</h2>
