--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,17 +2,17 @@
   <h1> Interests & Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
-   
+
    <div class="user">
    <p> I'm interested in the intersection of Robotics and Artificial Intelligence:
        My expertise and experience range from Computer Vision, Machine Learning,
        Deep Learning, Control Theory, Signal Processing, Oil&Gas Material Integrity research,
        Advanced Dynamics. In my spare time, I do sports, video games, and like to explore
-       open research problems.
-   </p>
+       open research problems.</p>
    </div>
-    
+
+  <div class="user">
+   
    <div class="tech">
       <h2>Code</h2>
       <i class="devicon-python-plain"></i>
