update sea lion pix

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/sealion.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> SeaLion Classification </h3>
