--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,10 @@
     <ul>
       <li> Python, OpenCV, Numpy </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -24,7 +27,10 @@
     <ul>
       <li> Matlab, Python, CNN </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p> A computer vision algorithm is designed to find and counts sea lions from aerial images
+      while also categorizing found sea lions to classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
+      First, a high-resolution aerial image is cut into smaller images. Next, patches extracted from the smaller images are used to 
+      train a convolutional neural network for classification</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -38,7 +44,10 @@
     <ul>
       <li> Python, OpenCV, Numpy </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -52,7 +61,7 @@
     <ul>
       <li> Matlab </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -66,8 +75,9 @@
     <ul>
       <li> Lua, VREP </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <p>Using Virtual Robot Experimentation Platform, a Quadrotor can be controlled using a dedicated controller
+      such as PID with a Lua script. Quadrotor includes visual feedback to detect the desired landing spot.</p>
+    <a class="project-link" href="https://youtu.be/rknVlYxYKeY">Check it out</a>
   </div>
 </div>
 
@@ -80,7 +90,9 @@
     <ul>
       <li> Matlab, Simulink, S-Functions </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Backstepping is a Nonlinear controller based on Lyapunov functions. 
+      Four controllers are developed for the Altitude, Yaw, Pitch, and Roll attitudes of the quadrotor.
+    </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -94,7 +106,8 @@
     <ul>
       <li> Matlab, Simulink, S-Functions </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>ADRC is an interesting controller that uses and Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
+      (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
