--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -23,6 +23,23 @@ These measures are then combined to create a weight map used to blend each of th
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
+    <h3> Hyperparameters:Deep Neural Networks </h3>
+    <ul>
+      <li> Python, Keras, Numpy </li>
+    </ul>
+    <p> Hyperparameters are very important for optimum performance of Deep learning models.
+      These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
+      This work explores different values of these parameters and the corresponding performance of an MNIST-DNN model.
+    </p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
     <h3> SeaLion Classification </h3>
     <ul>
       <li> Matlab, Python, CNN </li>
