--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
         <a class="link" href="#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
         <a class="link" href="#blog" data-scroll>Blog</a>
+        <a class="link" href="assets/img/Awesome_CV.pdf" data-scroll>CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
