--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="#blog" data-scroll>Blog</a>
-        <a class="link" href="#cv" data-scroll>CV</a>
+        <a class="link" href="https://kbmajeed.github.io/pdf_cv/" >Blog</a>
+        <a class="link" href="https://kbmajeed.github.io/pdf_cv/" >CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
