--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Exposure Fusion Algorithm </h3>
+    <h3> Exposure Fusion </h3>
     <ul>
       <li> Python, OpenCV, Numpy </li>
     </ul>
@@ -52,6 +52,169 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Implementing YOLO Object detection algorithm </h3>
+    <ul>
+      <li> Python, Keras </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Dinasour name generation using RNN </h3>
+    <ul>
+      <li> Hardware, Radio Frequency, 2G/3G, VCXO </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Nonlinear Backstepping Control of Induction Motor </h3>
+    <ul>
+      <li> Matlab, Simulink, Backstepping control </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> LMS-based Adaptive Active Disturbance rejection Controller </h3>
+    <ul>
+      <li> LMS, ADRC, ESO </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Tracking Endangered Rhinoceros with an Unmanned Drone </h3>
+    <ul>
+      <li> Extended Kalman Filter, Backstepping & PD Control </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> High Dynamic Ranging </h3>
+    <ul>
+      <li> Python, OpenCV </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Video Textures </h3>
+    <ul>
+      <li> Python, OpenCV </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Panorams </h3>
+    <ul>
+      <li> Python, OpenCV </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Image Blending using Gaussian Pyramids </h3>
+    <ul>
+      <li> Python, Numpy, Scipy, OpenCV </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -59,7 +222,24 @@ These measures are then combined to create a weight map used to blend each of th
   <div class="contents">
     <h3> Seam Carving for Content-Aware Image Resizing </h3>
     <ul>
-      <li> Python, OpenCV, Numpy </li>
+      <li> Python, OpenCV, Numpy, Dynamic Programming </li>
+    </ul>
+    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
+      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Mobile Phone Jammer Using Extrinsic Noise </h3>
+    <ul>
+      <li> Hardware, Radio Frequency, 2G/3G, VCXO </li>
     </ul>
     <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
