--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,13 @@
       <div class="header-icons">
         <a aria-label="Send email" href=mailto:kbmajeed1@gmail.com><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/kbmajeed"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href=""><i class="fab fa-linkedin" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="https://kbmajeed.github.io/pdf_cv/" >Blog</a>
-        <a class="link" href="https://kbmajeed.github.io/pdf_cv/" >CV</a>
+        <a class="link" href="https://kbmajeed.github.io/pdf_cv/">Blog</a>
+        <a class="link" href="https://kbmajeed.github.io/pdf_cv/">CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
