--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <div class="header-icons">
         <a aria-label="Send email" href=mailto:kbmajeed1@gmail.com><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="LinkedIn" href="https://www.linkedin.com/in/kbmajeed/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <a aria-label="LinkedIn" href="https://www.linkedin.com/in/kbmajeed/"><i class="fa fa-linkedin-square"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
