--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
       <div class="header-icons">
         <a aria-label="Send email" href=mailto:kbmajeed1@gmail.com><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-      </div>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/kbmajeed/"><i class='fab fa-linkedin' style='font-size:36px'></i></a>
+    </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
