--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,10 @@
         <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
+        <a class="link" href="#blog" data-scroll>Blog</a>
+        <a class="link" href="#cv" data-scroll>CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
