--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -148,7 +148,7 @@ These measures are then combined to create a weight map used to blend each of th
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> High Dynamic Ranging </h3>
+    <h3> High Dynamic Range Imaging </h3>
     <ul>
       <li> Python, OpenCV </li>
     </ul>
