--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -37,7 +37,7 @@ These measures are then combined to create a weight map used to blend each of th
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Webp.net-resizeimage.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> SeaLion Classification </h3>
