--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,22 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
-
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Exposure Fusion </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
 
 <div class="user-projects">
   <div class="images-right">
