--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,8 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
+    <iframe width="1193" height="671" src="https://www.youtube.com/embed/kaR0zuAqziA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
