--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,8 +3,150 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <iframe width="1193" height="671" src="https://www.youtube.com/embed/kaR0zuAqziA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Viola Jones Face Detection (with Boosting) </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Optical Flow (Lucas Kanade) Algorithm </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Q-learning for Navigation </h3>
+    <ul>
+      <li> Python, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Object Tracking using Particle Filter </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Pedestrian Tracking and Detection </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> vStock Market Portfolio Simulator </h3>
+    <ul>
+      <li> Python, Pandas, Numpy, Matplotlib </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Markerless Augmented Reality </h3>
+    <ul>
+      <li> Python, OpenCV, Numpy </li>
+    </ul>
+    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-details">
+  <h1> Featured Projects </h1>
+</div>
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
