--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,11 +3,6 @@
   <h1> Featured Projects </h1>
 </div>
 
-
-
-
-
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -25,7 +20,6 @@
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -37,12 +31,10 @@
     </ul>
     <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
         As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
-These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
-</p>
+        These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -61,7 +53,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -79,7 +70,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -94,7 +84,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -112,7 +101,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -129,7 +117,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -141,12 +128,10 @@ These measures are then combined to create a weight map used to blend each of th
     </ul>
     <p> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
       the brightness constancy equation. It is assumed that objects move slowly, however, for fast
-      moving objects, the Heirarchical LK performs better
-    .</p>
+      moving objects, the Heirarchical LK performs better.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -163,7 +148,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -175,12 +159,10 @@ These measures are then combined to create a weight map used to blend each of th
     </ul>
     <p> Hyperparameters are very important for optimum performance of Deep learning models.
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
-      This work explores different values of these parameters and the corresponding performance of an MNIST-DNN model.
-    </p>
+      This work explores different values of these parameters and the corresponding performance of an MNIST-DNN model.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -192,13 +174,12 @@ These measures are then combined to create a weight map used to blend each of th
       <li> Matlab, Python, CNN </li>
     </ul>
     <p> A computer vision algorithm is designed to find and counts sea lions from aerial images
-      while also categorizing found sea lions to classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
+      while also categorizing found sea lions to classes: adult males, sub adult males, adult females, juveniles and pups respectively. 
       First, a high-resolution aerial image is cut into smaller images. Next, patches extracted from the smaller images are used to 
       train a convolutional neural network for classification</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -213,8 +194,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -232,7 +211,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -248,7 +226,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -262,7 +239,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -281,7 +257,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -302,7 +277,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -320,7 +294,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -336,7 +309,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -354,7 +326,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -370,7 +341,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -389,7 +359,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -407,7 +376,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -421,7 +389,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
@@ -438,7 +405,6 @@ These measures are then combined to create a weight map used to blend each of th
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -454,7 +420,6 @@ These measures are then combined to create a weight map used to blend each of th
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
-
 
 <div class="user-projects">
   <div class="images-right">
