--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,8 @@
     </ul>
     <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
         As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
-        These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.</p>
+These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
+</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -128,22 +129,8 @@
     </ul>
     <p> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
       the brightness constancy equation. It is assumed that objects move slowly, however, for fast
-      moving objects, the Heirarchical LK performs better.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
-  </div>
-</div>
-
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Q-Learning for Bot Navigation </h3>
-    <ul>
-      <li> Python </li>
-    </ul>
-    <p>The Model-free reinforcement learning Q-learning algorithm was programmed for navigating 
-    a simple maze.</p>
+      moving objects, the Heirarchical LK performs better
+    .</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -159,7 +146,8 @@
     </ul>
     <p> Hyperparameters are very important for optimum performance of Deep learning models.
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
-      This work explores different values of these parameters and the corresponding performance of an MNIST-DNN model.</p>
+      This work explores different values of these parameters and the corresponding performance of an MNIST-DNN model.
+    </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -174,7 +162,7 @@
       <li> Matlab, Python, CNN </li>
     </ul>
     <p> A computer vision algorithm is designed to find and counts sea lions from aerial images
-      while also categorizing found sea lions to classes: adult males, sub adult males, adult females, juveniles and pups respectively. 
+      while also categorizing found sea lions to classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
       First, a high-resolution aerial image is cut into smaller images. Next, patches extracted from the smaller images are used to 
       train a convolutional neural network for classification</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
